2017-08-03  Aurelien Jarno  <aurelien@aurel32.net>

	* stdlib/getentropy.c (getentropy): Change return type to int.

2017-08-03  Aurelien Jarno  <aurelien@aurel32.net>

	* sysdeps/i386/i686/fpu/multiarch/libm-test-ulps: Regenerated.

2017-08-03  Florian Weimer  <fweimer@redhat.com>

	[BZ #21885]
	* sysdeps/posix/getaddrinfo.c (gethosts): Release resolver context
	on memory allocation failure.

2017-08-02  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* version.h (RELEASE): Set to "stable"
	(VERSION): Set to 2.26.
	* include/features.h (__GLIBC_MINOR__): Set to 26.

	* manual/contrib.texi: Update contributors.
	* manual/install.texi: Update latest tested versions of gcc and
	binutils.
	* INSTALL: Regenerate.

	* NEWS: Add bugs fixed.

	* po/fr.po: Update translations.

2017-08-01  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* NEWS: Update security-related changes.

2017-07-30  Siddhesh Poyarekar  <siddhesh@sourceware.org>

	* po/be.po: Update translations.
	* po/ko.po: Likewise.
	* po/nl.po: Likewise.
	* po/ru.po: Likewise.

2017-07-29  Torvald Riegel  <triegel@redhat.com>
	    Carlos O'Donell  <carlos@redhat.com>

	[BZ 21778]
	* nptl/pthread_mutex_timedlock.c (__pthread_mutex_timedlock): Update
	oldval if the CAS fails.
	* nptl/pthread_mutex_lock.c (__pthread_mutex_lock_full): Likewise.
	* nptl/tst-mutex7.c: Add comments explaining template test.
	(ROBUST, DELAY_NSEC, ROUNDS, N): New.
	(tf, do_test): Use them.
	* nptl/tst-mutex7robust.c: New file.
	* nptl/Makefile (tests): Add new test.

2017-07-28  Nathan Rossi  <nathan@nathanrossi.com>

	[BZ #21779]
	* sysdeps/unix/sysv/linux/microblaze/pt-vfork.S: Branch using PLT.

	* sysdeps/microblaze/libm-test-ulps: Update.

2017-07-28  Chung-Lin Tang  <cltang@codesourcery.com>

	* sysdeps/nios2/libm-test-ulps: Update.

2017-07-28  Torvald Riegel  <triegel@redhat.com>
	    Carlos O'Donell  <carlos@redhat.com>

	[BZ #21298]
	* nptl/Makefile (tests-internal): Add tst-rwlock20.